--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,6 +23,42 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+body {
+  text-align: center;
+}
+
+/*  Form Styling  */
+
+form {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  width: 300px;
+}
+
+input {
+  width: 100%;
+  position: relative;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 2px 2px 10px 1px rgb(192, 194, 194);
+  padding: 15px;
+  color: #101010;
+  text-align: center;
+  border: none;
+  margin: 10px;
+  font-size: 20px;
+  border-radius: 6px;
+}
+
+/*  error validation  */
+.exist_err {
+  box-shadow: 2px 3px 20px 2px rgb(255, 179, 179);
 }
