--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,27 +38,48 @@ body {
 /*  Form Styling  */
 
 form {
+  background-color: #f1f1f1;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
   width: 300px;
+  border-radius: 6px;
+  box-shadow: 2px 3px 15px 2px #f5f5f8;
 }
 
 input {
   width: 100%;
   position: relative;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(248, 248, 248);
   box-shadow: 2px 2px 10px 1px rgb(192, 194, 194);
-  padding: 15px;
+  padding: 10px;
   color: #101010;
   text-align: center;
   border: none;
-  margin: 10px;
+  margin: 20px 20px 0px 20px;
   font-size: 20px;
   border-radius: 6px;
 }
+input[type="submit"] {
+  margin-bottom: 20px;
+  background-color: #07a7c4;
+  padding: 5px;
+  width: 30%;
+  left: calc(70% - 40px);
+  box-shadow: 1px 1px 12px 1px #9edbf7 inset;
+  box-shadow: 2px 1px 10px 2px rgb(201, 201, 201);
+}
+input[type="submit"]:hover {
+  background-color: #00b4cf;
+}
 
+input[type="submit"]:disabled {
+  background-color: #d6d6d6;
+}
+input[type="submit"]:disabled:hover {
+  background-color: #d6d6d6;
+}
 /*  error validation  */
 .exist_err {
-  box-shadow: 2px 3px 20px 2px rgb(255, 179, 179);
+  box-shadow: 2px 3px 20px 2px rgba(255, 179, 179, 0.61);
 }
