--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,4 +1,7 @@
+/* @import url('https://fonts.googleapis.com/css?family=Pompiere'); */
+
 .App {
+  font-family: 'Pompiere', cursive;
   text-align: center;
 }
 
@@ -15,6 +18,7 @@
 }
 
 .App-title {
+  font-family: 'Pompiere', cursive;
   font-size: 1.5em;
 }
 
@@ -38,48 +42,81 @@ body {
 /*  Form Styling  */
 
 form {
-  background-color: #f1f1f1;
+  font-family: 'Pavanam', sans-serif;
+  background-color: #2e2e2e;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
-  width: 300px;
+  width: 360px;
   border-radius: 6px;
-  box-shadow: 2px 3px 15px 2px #f5f5f8;
+  box-shadow: 2px 3px 15px 2px #d4d4d4;
 }
 
 input {
-  width: 100%;
+  width: calc(100% - 50px);
   position: relative;
-  background-color: rgb(248, 248, 248);
-  box-shadow: 2px 2px 10px 1px rgb(192, 194, 194);
-  padding: 10px;
-  color: #101010;
+  background-color: rgb(24, 24, 24);
+  box-shadow: 1px 1px 6px 1px rgb(26, 26, 26) inset;
+  padding: 5px;
+  color: #ffffff;
   text-align: center;
   border: none;
-  margin: 20px 20px 0px 20px;
-  font-size: 20px;
+  margin: 15px 20px 0px 20px;
+  font-size: 18px !important;
+  border: 1px solid #666666;
   border-radius: 6px;
-}
-input[type="submit"] {
-  margin-bottom: 20px;
-  background-color: #07a7c4;
-  padding: 5px;
-  width: 30%;
-  left: calc(70% - 40px);
-  box-shadow: 1px 1px 12px 1px #9edbf7 inset;
-  box-shadow: 2px 1px 10px 2px rgb(201, 201, 201);
-}
-input[type="submit"]:hover {
-  background-color: #00b4cf;
+  font: inherit;
+  transition-duration: 0.2s;
 }
 
-input[type="submit"]:disabled {
-  background-color: #d6d6d6;
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: rgb(196, 196, 196);
 }
-input[type="submit"]:disabled:hover {
-  background-color: #d6d6d6;
+::-moz-placeholder {
+  /* Firefox 19+ */
+  color: rgb(196, 196, 196);
+}
+:-ms-input-placeholder {
+  /* IE 10+ */
+  color: rgb(196, 196, 196);
+}
+:-moz-placeholder {
+  /* Firefox 18- */
+  color: rgb(196, 196, 196);
+}
+
+input:focus {
+  background-color: rgb(19, 19, 19);
+  box-shadow: 2px 2px 10px 1px rgb(32, 32, 32);
+}
+
+input[type='submit'] {
+  margin-bottom: 20px;
+  background-color: #008a00;
+  padding: 4px;
+  width: 30%;
+  color: white;
+  left: calc(70% - 40px);
+  box-shadow: 1px 1px 10px 1px rgb(32, 32, 32);
+}
+input[type='submit']:hover {
+  background-color: #007206;
+}
+
+input[type='submit']:disabled {
+  background-color: #535353;
+  cursor: not-allowed;
 }
 /*  error validation  */
 .exist_err {
-  box-shadow: 2px 3px 20px 2px rgba(255, 179, 179, 0.61);
+  border-color: rgb(255, 152, 152);
+}
+
+.form-title {
+  width: 100%;
+  font-size: 24px;
+  text-align: center;
+  color: white;
+  margin-bottom: 0;
 }
