--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -3,20 +3,30 @@ nav {
   padding: 0px;
   border-bottom: 1px #eeeeee solid;
   background-color: white;
+  width: 100%;
+  height: 90px;
 }
 
 ul {
   margin: 0px;
-  padding: 15px 20px;
-  display: flex;
+  padding: 0px 20px;
   list-style: none;
+  display: flex;
 }
 
 li {
   padding: 0px 10px;
+  line-height: 90px;
+  float: left;
 }
 
-.brand {
+.nav-leftLinks {
+  position: relative;
   margin-right: auto;
-  line-height: 48px;
+}
+.nav-leftLinks > * {
+}
+.nav-rightLinks {
+  right: 0px;
+  margin-left: auto;
 }
