--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,70 +1,37 @@
-/* @import url('https://fonts.googleapis.com/css?family=Pompiere'); */
-
-.App {
-  font-family: 'Pompiere', cursive;
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-family: 'Pompiere', cursive;
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 body {
   text-align: center;
-  background-color: #f0f0f0;
+  background-color: #f9f9f9;
 }
 
 /*  Form Styling  */
 
 form {
   font-family: 'Pavanam', sans-serif;
-  background-color: #2e2e2e;
-  margin: auto;
+  background-color: #ffffff;
+  margin: 10px auto;
   display: flex;
   flex-wrap: wrap;
   width: 360px;
   border-radius: 6px;
-  box-shadow: 2px 3px 15px 2px #d4d4d4;
+  box-shadow: 0 2px 5px 2px #d4d4d4;
+}
+textarea:focus,
+input:focus {
+  outline: none;
 }
 
 input {
   width: calc(100% - 50px);
   position: relative;
-  background-color: rgb(24, 24, 24);
-  box-shadow: 1px 1px 6px 1px rgb(26, 26, 26) inset;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 1px 2px rgba(173, 173, 173, 0.623) inset;
   padding: 5px;
-  color: #ffffff;
+  color: #000000;
   text-align: center;
   border: none;
   margin: 15px 20px 0px 20px;
   font-size: 18px !important;
-  border: 1px solid #666666;
+  border: 1px solid #d3d3d3;
   border-radius: 6px;
   font: inherit;
   transition-duration: 0.2s;
@@ -72,24 +39,24 @@ input {
 
 ::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
-  color: rgb(196, 196, 196);
+  color: rgb(117, 117, 117);
 }
 ::-moz-placeholder {
   /* Firefox 19+ */
-  color: rgb(196, 196, 196);
+  color: rgb(117, 117, 117);
 }
 :-ms-input-placeholder {
   /* IE 10+ */
-  color: rgb(196, 196, 196);
+  color: rgb(117, 117, 117);
 }
 :-moz-placeholder {
   /* Firefox 18- */
-  color: rgb(196, 196, 196);
+  color: rgb(117, 117, 117);
 }
 
 input:focus {
-  background-color: rgb(19, 19, 19);
-  box-shadow: 2px 2px 10px 1px rgb(32, 32, 32);
+  background-color: rgba(255, 255, 255, 0.158);
+  box-shadow: 2px 2px 3px rgba(32, 32, 32, 0.192) inset;
 }
 
 input[type='submit'] {
@@ -99,7 +66,7 @@ input[type='submit'] {
   width: 30%;
   color: white;
   left: calc(70% - 40px);
-  box-shadow: 1px 1px 10px 1px rgb(32, 32, 32);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.144);
 }
 input[type='submit']:hover {
   background-color: #007206;
@@ -111,6 +78,7 @@ input[type='submit']:disabled {
 }
 /*  error validation  */
 .exist_err {
+  background-color: bisque;
   border-color: rgb(255, 152, 152);
 }
 
