--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -1,8 +1,15 @@
-nav {
+.nav {
+  position: fixed;
   margin: 0px;
   padding: 0px;
-  border-bottom: 1px #eeeeee solid;
-  background-color: white;
+  background-color: #33b5e5;
+  width: 100%;
+  height: 90px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.24);
+  z-index: 999999;
+}
+.navbar {
+  position: relative;
   width: 100%;
   height: 90px;
 }
@@ -11,12 +18,10 @@ ul {
   margin: 0px;
   padding: 0px 20px;
   list-style: none;
-  display: flex;
 }
 
 li {
   padding: 0px 10px;
-  line-height: 90px;
   float: left;
 }
 
@@ -26,7 +31,22 @@ li {
 }
 .nav-leftLinks > * {
 }
+.nav > ul > li > a {
+  line-height: 90px;
+  vertical-align: middle;
+  color: white;
+  text-decoration: none;
+}
 .nav-rightLinks {
-  right: 0px;
-  margin-left: auto;
+  float: left;
+  position: absolute;
+  right: 0;
+}
+
+.brand {
+  font-size: 20px;
+  font-family: 'Andika', sans-serif;
+}
+.brand > a {
+  line-height: 86px !important;
 }
