--- a/client/src/styles/IndvStore.css
+++ b/client/src/styles/IndvStore.css
@@ -1,14 +1,16 @@
-.IndvStoreDiv > * {
+.IndvStore {
   width: 93%;
   padding: 1%;
   margin: 2.5%;
   background-color: white;
   border-radius: 3px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .IndvStoreHead > * {
   text-align: justify;
   padding: 5px;
+  font-family: 'Maitree', serif;
 }
 .IndvStoreName {
   font-size: 20px;
