--- a/client/src/styles/stores.css
+++ b/client/src/styles/stores.css
@@ -1,14 +1,20 @@
 .stores-div {
-  display: flex;
-  flex-flow: wrap;
+  margin-right: 10px;
+}
+.stores-div > a {
+  font-family: 'Maitree', serif;
+  text-align: center;
+  text-decoration: none;
 }
 .store {
+  float: left;
   background-color: rgb(255, 255, 255);
-  margin: calc((1vw + 35px) / 6);
-  width: calc(33vw - 12px);
-  float: left;
+  width: calc((100% - 30px) / 3);
+  margin-left: 10px;
+  margin-top: 10px;
   color: black;
-  float: left;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  border-radius: 3px;
 }
 .storeDetails > * {
   position: relative;
@@ -43,16 +49,14 @@
 
 @media only screen and (max-width: 720px) {
   .store {
-    margin: 6px;
-    display: block;
-    width: calc(50vw - 20px);
+    width: calc((100% - 20px) / 2);
+    margin-top: 10px;
     float: left;
   }
 }
 
 @media only screen and (max-width: 500px) {
   .store {
-    margin: 2.5vw;
-    width: 95vw;
+    width: calc(100% - 10px);
   }
 }
