--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -86,7 +86,7 @@ input[type='submit']:disabled {
   width: 100%;
   font-size: 24px;
   text-align: center;
-  color: white;
+  color: rgb(0, 111, 145);
   margin-bottom: 0;
 }
 
